--- a/railway-app-frontend/src/modules/auth/components/login-form/login-form.component.scss
+++ b/railway-app-frontend/src/modules/auth/components/login-form/login-form.component.scss
@@ -1,7 +1,7 @@
 
 .login-container {
 
-    margin-top: 2.5rem;
+    margin-top: 1rem;
 
     h3 {
         font-size: 1.2rem;
@@ -29,11 +29,51 @@
 
     .or-paragraph {
         font-weight: bold;
-        font-size: 1rem;
+        font-size: 1.2rem;
     }
 
-    img {
-        margin-bottom: 0.3rem;
+    div.socials {
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        justify-content: center;
+        align-items: center;
     }
 
+    .microsoft-btn {
+        position: relative;
+        display: flex !important;
+        align-items: center;
+        text-align: center;
+        width: 200px;
+        font-size: 14px;
+        font-weight: 400;
+        background-color: white;
+        color: black;
+        cursor: pointer;
+        border-radius: 1.5rem;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        transition: background-color 0.3s;
+        padding: 0.65rem;
+        margin-bottom: 1rem;
+        border: none;
+        // box-shadow: 0 0 0 4px rgba(173, 216, 230, 0.5);
+        transition: box-shadow 0.3s;
+
+        img {
+            position: absolute;
+            height: 20px;
+            width: auto;
+            vertical-align: middle;
+            right: 0.4rem;
+        }
+    }
+
+    .microsoft-btn:hover {
+        box-shadow: 0 0 0 2.5px var(--light-blue-transparent);
+        background-color: var(--very-light-blue-back);
+    }
 }
+
