--- a/railway-app-frontend/src/styles.scss
+++ b/railway-app-frontend/src/styles.scss
@@ -25,6 +25,8 @@ body {
     --slate: #757d94;
     --light-slate: #b8bdce;
     --transparent-green: rgba(100, 255, 219, 0.139);
+    --light-blue-transparent: rgba(173, 216, 230, 0.5);
+    --very-light-blue-back: rgb(246, 253, 255);
 }
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
