--- a/railway-app-frontend/src/modules/auth/pages/welcome-page/welcome-page.component.scss
+++ b/railway-app-frontend/src/modules/auth/pages/welcome-page/welcome-page.component.scss
@@ -13,7 +13,7 @@
 
 .photo {
     flex: 1;
-    max-height: calc(100vh - 4rem);
+    height: calc(100vh - 4rem);
     overflow: hidden;
 
     img {
@@ -23,5 +23,5 @@
 
 .content {
     flex: 1;
-    padding: 3rem 2.5rem 2rem 2.5rem;
+    padding: 2.5rem 2.5rem 2rem 2.5rem;
 }
