--- a/railway-app-frontend/src/modules/shared/pages/departures-timetable/departures-timetable.component.html
+++ b/railway-app-frontend/src/modules/shared/pages/departures-timetable/departures-timetable.component.html
@@ -10,7 +10,9 @@
         [page]="page" 
         [pageSize]="pageSize"
         [totalElements]="totalElements"
-        [dataSource]="dataSource"></app-departures-table>
+        [dataSource]="dataSource"
+        (goToDetailsPageEvent)="goToDetails($event)">
+    </app-departures-table>
     </div>
 
 </div>
