Adding map view

--- a/railway-app-frontend/src/modules/shared/pages/departure-details-page/departure-details-page.component.html
+++ b/railway-app-frontend/src/modules/shared/pages/departure-details-page/departure-details-page.component.html
@@ -13,6 +13,11 @@
         [startingStation]="departureDetails.startingStation"
         [destinationStation]="departureDetails.destinationStation"
         ></app-departure-details-header>
+
+        <app-map-container 
+        [stationDepartures]="departureDetails.allStations"
+        [startingStation]="departureDetails.startingStation">
+    </app-map-container>
     </div>
 
     <app-ticket-buy-button></app-ticket-buy-button>
