--- a/railway-app-frontend/src/modules/shared/components/map-container/map-container.component.html
+++ b/railway-app-frontend/src/modules/shared/components/map-container/map-container.component.html
@@ -1,1 +1,6 @@
-<p>map-container works!</p>
+<div class="map-container">
+    <div class="map-frame">
+        <div id="map"></div>
+    </div>
+</div>
+<img src="">
