--- a/railway-app-frontend/src/modules/shared/components/train-departure-details/train-departure-details.component.html
+++ b/railway-app-frontend/src/modules/shared/components/train-departure-details/train-departure-details.component.html
@@ -2,8 +2,8 @@
     <h1>{{train.name}} <span class="availability">Occupied: {{numOfSoldTickets}}/{{totalNumOfSeats}}</span></h1>
 
     <div class="badges">
-        <img *ngIf="train.type === 'REGIO'" src="https://w3.srbvoz.rs/redvoznje/Content/img/RE.jpg" title="REGIO VOZ">
-        <img  *ngIf="train.type === 'SOKO'" src="https://w3.srbvoz.rs/redvoznje/Content/img/soko.svg" title="INTER CITY">
+        <img *ngIf="train.type === 'REGIO'" src="https://w3.srbvoz.rs/redvoznje/Content/img/RE.jpg" title="REGIO VOZ">&nbsp;
+        <img  *ngIf="train.type === 'SOKO'" src="https://w3.srbvoz.rs/redvoznje/Content/img/soko.svg" title="INTER CITY">&nbsp;
         <app-train-benefits-icons [benefits]="train.trainBenefits"></app-train-benefits-icons>
     </div>
 
