--- a/railway-app-frontend/src/modules/root/app/components/nav-bar/nav-bar.component.scss
+++ b/railway-app-frontend/src/modules/root/app/components/nav-bar/nav-bar.component.scss
@@ -51,3 +51,9 @@ a {
     text-decoration-color: var(--deep-blue);
     text-decoration-thickness: 0.15rem;
 }
+
+.mat-menu-icon {
+    vertical-align: middle;
+    transform: scale(1.5);
+    margin-right: 1rem;
+}
