--- a/railway-app-frontend/src/modules/shared/components/all-stations-table/all-stations-table.component.html
+++ b/railway-app-frontend/src/modules/shared/components/all-stations-table/all-stations-table.component.html
@@ -5,4 +5,6 @@
         <app-station-row [stationDeparture]="station"></app-station-row>
     </div>
 
+    <span class="note">*Shows all stations on the route</span>
+
 </div>
