--- a/railway-app-frontend/src/modules/shared/pages/departure-details-page/departure-details-page.component.html
+++ b/railway-app-frontend/src/modules/shared/pages/departure-details-page/departure-details-page.component.html
@@ -16,7 +16,8 @@
 
         <app-map-container 
         [stationDepartures]="departureDetails.allStations"
-        [startingStation]="departureDetails.startingStation">
+        [startingStation]="departureDetails.startingStation"
+        [destinationStation]="departureDetails.destinationStation">
     </app-map-container>
     </div>
 
