Adding front end logic for ticket buying

--- a/railway-app-frontend/src/modules/regular-user/components/ticket-buy-button/ticket-buy-button.component.html
+++ b/railway-app-frontend/src/modules/regular-user/components/ticket-buy-button/ticket-buy-button.component.html
@@ -1,2 +1,2 @@
 
-<button color="primary" mat-fab><mat-icon>local_activity</mat-icon></button>
+<button color="primary" mat-fab (click)="openBuyTicketDialog()"><mat-icon>local_activity</mat-icon></button>
