--- a/railway-app-frontend/src/modules/shared/pages/departure-details-page/departure-details-page.component.html
+++ b/railway-app-frontend/src/modules/shared/pages/departure-details-page/departure-details-page.component.html
@@ -21,5 +21,9 @@
     </app-map-container>
     </div>
 
-    <app-ticket-buy-button></app-ticket-buy-button>
+    <app-ticket-buy-button *ngIf="loggedUser && isRegular"
+    [departureId]="departureDetails.id" 
+    [destinationStation]="departureDetails.destinationStation"
+    [startingStation]="departureDetails.startingStation"
+    ></app-ticket-buy-button>
 </div>
