--- a/railway-app-frontend/src/modules/regular-user/components/buy-ticket-dialog/buy-ticket-dialog.component.scss
+++ b/railway-app-frontend/src/modules/regular-user/components/buy-ticket-dialog/buy-ticket-dialog.component.scss
@@ -22,3 +22,11 @@
         margin-left: 3rem;
     }
 }
+
+.spinner-container {
+    height: 50vh;
+    width: 40vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
