--- a/railway-app-frontend/src/modules/shared/pages/departure-details-page/departure-details-page.component.html
+++ b/railway-app-frontend/src/modules/shared/pages/departure-details-page/departure-details-page.component.html
@@ -25,5 +25,6 @@
     [departureId]="departureDetails.id" 
     [destinationStation]="departureDetails.destinationStation"
     [startingStation]="departureDetails.startingStation"
+    (onDialogCloseEvent)="updateSoldTickets()"
     ></app-ticket-buy-button>
 </div>
