Adding front end logic for user profile update & bug fixes on backend

--- a/railway-app-frontend/src/modules/root/app/components/nav-bar/nav-bar.component.html
+++ b/railway-app-frontend/src/modules/root/app/components/nav-bar/nav-bar.component.html
@@ -28,7 +28,7 @@
     </div>
 
     <mat-menu #menu="matMenu">
-        <button mat-menu-item>
+        <button mat-menu-item (click)="redirectToUserManagementPage()">
             <mat-icon color="primary">edit</mat-icon><span>Edit profile</span>
         </button>
         <button mat-menu-item (click)="logOut()">
