--- a/railway-app-frontend/src/styles.scss
+++ b/railway-app-frontend/src/styles.scss
@@ -24,6 +24,7 @@ body {
     --lightest-navy: #395f9f;
     --slate: #757d94;
     --light-slate: #b8bdce;
+    --lightest-slate: #ced2de;
     --transparent-green: rgba(100, 255, 219, 0.139);
     --light-blue-transparent: rgba(173, 216, 230, 0.5);
     --very-light-blue-back: rgb(246, 253, 255);
