--- a/railway-app-frontend/src/modules/regular-user/pages/token-transactions-page/token-transactions-page.component.html
+++ b/railway-app-frontend/src/modules/regular-user/pages/token-transactions-page/token-transactions-page.component.html
@@ -1,1 +1,10 @@
-<p>token-transactions-page works!</p>
+<div class="financial-card-container">
+
+    <div style="flex: 1;">
+        <app-paypal-buying-form></app-paypal-buying-form>
+    </div>
+    <div style="flex: 1;">
+        <app-transactions-history></app-transactions-history>
+    </div>
+
+</div>
