--- a/railway-app-frontend/src/modules/regular-user/pages/processing-payment/processing-payment.component.html
+++ b/railway-app-frontend/src/modules/regular-user/pages/processing-payment/processing-payment.component.html
@@ -1,1 +1,3 @@
-<p>processing-payment works!</p>
+<div *ngIf="showLoadingScreen" style="display: flex; margin-top: 10%;" class="center-content">
+    <mat-spinner color="primary"></mat-spinner>
+</div>
